// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server should mount controllers and actions: mounted actions 1`] = `
Array [
  Object {
    "app": Object {
      "app": true,
    },
    "cb": [Function],
    "middleware": Array [],
    "parentPath": "/testing",
    "path": "/",
    "router": Object {
      "get": [Function],
      "router": true,
    },
    "verb": "get",
  },
  Object {
    "app": Object {
      "app": true,
    },
    "cb": [Function],
    "middleware": Array [],
    "parentPath": "/testing",
    "path": "/foobar",
    "router": Object {
      "get": [Function],
      "router": true,
    },
    "verb": "post",
  },
  Object {
    "app": Object {
      "app": true,
    },
    "cb": [Function],
    "middleware": Array [],
    "parentPath": "/testing",
    "path": "/",
    "router": Object {
      "get": [Function],
      "router": true,
    },
    "verb": "delete",
  },
  Object {
    "app": Object {
      "app": true,
    },
    "cb": [Function],
    "middleware": Array [
      [Function],
    ],
    "parentPath": "/testing",
    "path": "/with-middleware",
    "router": Object {
      "get": [Function],
      "router": true,
    },
    "verb": "get",
  },
]
`;

exports[`server should mount controllers and actions: mounted controllers 1`] = `
Array [
  Object {
    "app": Object {
      "app": true,
    },
    "middleware": Array [
      [Function],
    ],
    "path": "/testing",
    "router": Object {
      "get": [Function],
      "router": true,
    },
  },
]
`;

exports[`server should respond with mounted middleware 1`] = `
Object {
  "get": "bar",
  "middleware": "world",
}
`;
